--- a/Frontend/wis-front/package.json
+++ b/Frontend/wis-front/package.json
@@ -11,10 +11,13 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "prettier": "^3.2.5",
-    "turbo": "latest"
+    "eslint": "^9.39.1",
+    "prettier": "^3.7.4",
+    "tsup": "^8.5.1",
+    "turbo": "latest",
+    "typescript": "^5.9.3"
   },
-  "packageManager": "pnpm@9.0.4",
+  "packageManager": "pnpm@10.18.3",
   "engines": {
     "node": ">=18"
   }
